--- a/templates/logs.html
+++ b/templates/logs.html
@@ -49,6 +49,7 @@
 
       #page-content {
         flex: 1 0 auto;
+        margin-top: 6%;
       }
 
       #sticky-footer {
@@ -58,8 +59,8 @@
       /* Other Classes for Page Styling */
 
       body {
-        background: #777777;
-        background: linear-gradient(to right, #999999, #222222);
+        background: #E5E7E9 ;
+        background: linear-gradient(to right, #E5E7E9 , #E5E7E9 );
       }
       .stuck {
         bottom: 10px;
@@ -77,9 +78,21 @@
   </head>
   <body class="d-flex flex-column">
     <header class="bg-primary text-center py-2 mb-2">
-      <div class="container">
-        <h1 class="font-weight-light text-white">Meet the Team</h1>
-      </div>
+      <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Tada 🎉!!</a>
+            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('index')}}">Portfolio</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('logs')}}">Logs</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     </header>
 
     <div id="page-content">
@@ -92,16 +105,13 @@
             <br />
             <div class="card">
               <div class="card-header">
-                Quote
+                Daily Logs
               </div>
               <div class="card-body stuck">
                 <blockquote class="blockquote mb-0">
                   <p>
-                    <a class="btn btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
-                        Link with href
-                      </a>
-                      <div class="btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;margin-block: 40px">
-                          Data : Link with href
+                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;">
+                        &nbsp; &nbsp;Data : Link with href
                       </div> 
                       <div class="collapse" id="collapseExample">
                         <div class="card card-body">
@@ -161,7 +171,7 @@
     </div>
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
       <div class="container text-center">
-        <small>Copyright &copy; Your Website</small>
+        <small>Copyright &copy; codewithsidy 2020</small>
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
