logs form added

--- a/templates/addlogs.html
+++ b/templates/addlogs.html
@@ -137,7 +137,7 @@
             <br />
             <div class="card">
                 <div class="card-header">
-                Todo
+                Todo's
                 </div>
                 <div class="card-body stuck">
                   <blockquote class="blockquote mb-0">
