--- a/templates/addlogs.html
+++ b/templates/addlogs.html
@@ -59,8 +59,8 @@
       /* Other Classes for Page Styling */
 
       body {
-        background: #E5E7E9 ;
-        background: linear-gradient(to right, #E5E7E9 , #E5E7E9 );
+        background: #e5e7e9;
+        background: linear-gradient(to right, #e5e7e9, #e5e7e9);
       }
       .stuck {
         bottom: 10px;
@@ -71,32 +71,56 @@
       }
       .formButtonfront {
         width: 700px;
-  max-width: 100%;
-  /* padding: 15px; */
- }
- .dataform{
-    margin-top: 2%;
-
- }
+        max-width: 100%;
+        /* padding: 15px; */
+      }
+      .dataform {
+        margin-top: 2%;
+      }
     </style>
   </head>
   <body class="d-flex flex-column">
     <header class="bg-primary text-center py-2 mb-2">
-      <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+      <nav
+        class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top"
+        id="mainNav"
+      >
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Tada 🎉!!</a>
-            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('index')}}">Portfolio</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('logs')}}">Logs</a></li>
-                </ul>
-            </div>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top"
+            >Tada 🎉!!</a
+          >
+          <button
+            class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            Menu
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item mx-0 mx-lg-1">
+                <a
+                  class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                  href="{{url_for('index')}}"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item mx-0 mx-lg-1">
+                <a
+                  class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                  href="{{url_for('logs')}}"
+                  >Logs</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     </header>
 
     <div id="page-content">
@@ -113,55 +137,110 @@
               </div>
               <div class="card-body stuck">
                 <blockquote class="blockquote mb-0">
-                  <p>
-                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;">
-                        &nbsp; &nbsp;Data : Link with href
-                      </div> 
-                      <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                        </div>
-                      </div>
-                  </p>
                   <form method="POST" action="{{url_for('addlogs')}}">
-                  <input class="dataform" name="project" placeholder="Project" id="first_name" type="text" class="validate" >
-                  <input class="dataform" name="color" placeholder="Color" id="first_name" type="text" class="validate" >
-                  <input class="dataform" name="date" placeholder="Date" id="first_name" type="date" class="validate" >
-                  <input class="dataform" name="time" placeholder="Date" id="first_name" type="time" class="validate" >
-                  <textarea class="dataform"name="details" placeholder="Details" name="details" rows="4" cols="50"></textarea>
-                  <button class="btn btn-primary dataform" type="submit">Submit</button>
+                    <input
+                      class="dataform"
+                      name="project"
+                      placeholder="Project"
+                      id="first_name"
+                      type="text"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="color"
+                      placeholder="Color"
+                      id="first_name"
+                      type="text"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="date"
+                      placeholder="Date"
+                      id="first_name"
+                      type="date"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="time"
+                      placeholder="Date"
+                      id="first_name"
+                      type="time"
+                      class="validate"
+                    />
+                    <textarea
+                      class="dataform"
+                      name="details"
+                      placeholder="Details"
+                      name="details"
+                      rows="4"
+                      cols="50"
+                    ></textarea>
+                    <button class="btn btn-primary dataform" type="submit">
+                      Submit
+                    </button>
                   </form>
                 </blockquote>
               </div>
             </div>
             <br />
             <div class="card">
-                <div class="card-header">
+              <div class="card-header">
                 Todo's
-                </div>
-                <div class="card-body stuck">
-                  <blockquote class="blockquote mb-0">
-                    <p>
-                      <div class="btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;">
-                          &nbsp; &nbsp;Data : Link with href
-                        </div> 
-                        <div class="collapse" id="collapseExample">
-                          <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                          </div>
-                        </div>
-                    </p>
-                    <form method="POST" action="{{url_for('addlogs')}}">
-                    <input class="dataform" name="project" placeholder="Project" id="first_name" type="text" class="validate" >
-                    <input class="dataform" name="color" placeholder="Color" id="first_name" type="text" class="validate" >
-                    <input class="dataform" name="date" placeholder="Date" id="first_name" type="date" class="validate" >
-                    <input class="dataform" name="time" placeholder="Date" id="first_name" type="time" class="validate" >
-                    <textarea class="dataform"name="details" placeholder="Details" name="details" rows="4" cols="50"></textarea>
-                    <button class="btn btn-primary dataform" type="submit">Submit</button>
-                    </form>
-                  </blockquote>
-                </div>
               </div>
+              <div class="card-body stuck">
+                <blockquote class="blockquote mb-0">
+                  <form method="POST" action="{{url_for('addlogs')}}">
+                    <input
+                      class="dataform"
+                      name="project"
+                      placeholder="Project"
+                      id="first_name"
+                      type="text"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="color"
+                      placeholder="Color"
+                      id="first_name"
+                      type="text"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="date"
+                      placeholder="Date"
+                      id="first_name"
+                      type="date"
+                      class="validate"
+                    />
+                    <input
+                      class="dataform"
+                      name="time"
+                      placeholder="Date"
+                      id="first_name"
+                      type="time"
+                      class="validate"
+                    />
+                    <textarea
+                      class="dataform"
+                      name="details"
+                      placeholder="Details"
+                      name="details"
+                      rows="4"
+                      cols="50"
+                    ></textarea>
+                    <button class="btn btn-primary dataform" type="submit">
+                      Submit
+                    </button>
+                  </form>
+                </blockquote>
+              </div>
+            </div>
+            <br />
           </div>
         </div>
       </div>
