🚧admin(): log init

--- a/templates/addlogs.html
+++ b/templates/addlogs.html
@@ -140,7 +140,7 @@
                   <form method="POST" action="{{url_for('addlogs')}}">
                     <input
                       class="dataform"
-                      name="project"
+                      name="name"
                       placeholder="Project"
                       id="first_name"
                       type="text"
