--- a/templates/logs.html
+++ b/templates/logs.html
@@ -108,32 +108,20 @@
                 Daily Logs
               </div>
               <div class="card-body stuck">
+                {% for i in data %}
                 <blockquote class="blockquote mb-0">
                   <p>
-                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;">
-                        &nbsp; &nbsp;Data : Link with href
+                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#{{i.name}}{{i.log_id}}" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%; background-color: {{i.color}}">
+                        &nbsp; &nbsp;{{i.date}}/{{i.time}} : {{i.name}}
                       </div> 
-                      <div class="collapse" id="collapseExample">
+                      <div class="collapse" id="{{i.name}}{{i.log_id}}">
                         <div class="card card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                          {{i.details}}
                         </div>
                       </div>
                   </p>
-                  <footer class="blockquote-footer">
-                    Someone famous in
-                    <cite title="Source Title">Source Title</cite>
-                  </footer>
                 </blockquote>
-                <blockquote class="blockquote mb-0">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Integer posuere erat a ante.
-                  </p>
-                  <footer class="blockquote-footer">
-                    Someone famous in
-                    <cite title="Source Title">Source Title</cite>
-                  </footer>
-                </blockquote>
+                {% endfor %}
               </div>
             </div>
             <br />
