🚧admin(): todos init

--- a/templates/addlogs.html
+++ b/templates/addlogs.html
@@ -192,10 +192,10 @@
               </div>
               <div class="card-body stuck">
                 <blockquote class="blockquote mb-0">
-                  <form method="POST" action="{{url_for('addlogs')}}">
+                  <form method="POST" action="{{url_for('addtodos')}}">
                     <input
                       class="dataform"
-                      name="project"
+                      name="name"
                       placeholder="Project"
                       id="first_name"
                       type="text"
