--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -88,7 +88,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('index')}}">Portfolio</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('logs')}}">Logs</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('addlogs')}}">AddLogs</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{url_for('getcontact')}}">Admin</a></li>
                 </ul>
             </div>
         </div>
@@ -105,18 +106,18 @@
             <br />
             <div class="card">
               <div class="card-header">
-                Daily Logs
+                Contact Info.
               </div>
               <div class="card-body stuck">
                 {% for i in data %}
                 <blockquote class="blockquote mb-0">
                   <p>
-                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#{{i.name}}{{i.log_id}}" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%; background-color: {{i.color}}">
-                        &nbsp; &nbsp;{{i.date}}/{{i.time}} : {{i.name}}
+                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#{{i.name}}{{i.contact_id}}" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%;">
+                        &nbsp; &nbsp;{{i.name}} : {{i.phone}}
                       </div> 
-                      <div class="collapse" id="{{i.name}}{{i.log_id}}">
+                      <div class="collapse" id="{{i.name}}{{i.contact_id}}">
                         <div class="card card-body">
-                          {{i.details}}
+                          {{i.msg}}
                         </div>
                       </div>
                   </p>
@@ -130,29 +131,26 @@
                 Quote
               </div>
               <div class="card-body stuck">
-                <!-- <blockquote class="blockquote mb-0">
-                  <p>
-                    
-                  </p>
-                  <footer class="blockquote-footer">
-                    
-                    <cite title="Source Title"></cite>
-                  </footer>
-                </blockquote> -->
-                {% for i in datatodos %}
                 <blockquote class="blockquote mb-0">
                   <p>
-                    <div class="btn-primary formButtonfront " data-toggle="collapse" href="#{{i.name}}{{i.log_id}}" role="button" aria-expanded="false" aria-controls="collapseExample" style="border-radius: 4px;padding:1%; background-color: {{i.color}}">
-                        &nbsp; &nbsp;{{i.date}}/{{i.time}} : {{i.name}}
-                      </div> 
-                      <div class="collapse" id="{{i.name}}{{i.log_id}}">
-                        <div class="card card-body">
-                          {{i.details}}
-                        </div>
-                      </div>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Integer posuere erat a ante.
                   </p>
+                  <footer class="blockquote-footer">
+                    Someone famous in
+                    <cite title="Source Title">Source Title</cite>
+                  </footer>
                 </blockquote>
-                {% endfor %}
+                <blockquote class="blockquote mb-0">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Integer posuere erat a ante.
+                  </p>
+                  <footer class="blockquote-footer">
+                    Someone famous in
+                    <cite title="Source Title">Source Title</cite>
+                  </footer>
+                </blockquote>
               </div>
             </div>
             <br />
