--- a/application/blogs/templates/blogs/layout/base.html
+++ b/application/blogs/templates/blogs/layout/base.html
@@ -9,6 +9,13 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Tada 🎉!!</title>
+    
+<!-- Theme included stylesheets -->
+<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+<!-- Core build with no theme, formatting, non-essential modules -->
+<link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
     <!-- Favicon-->
     <link
       rel="icon"
@@ -90,5 +97,6 @@
     <script src="{{url_for('static',filename='assets/mail/contact_me.js')}}"></script>
     <!-- Core theme JS-->
     <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
+   
   </body>
 </html>
