📦 blog(): blog add page Done

--- a/application/blogs/templates/blogs/layout/footer.html
+++ b/application/blogs/templates/blogs/layout/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer text-center" style="background-color:none">
+<footer class="footer  text-center">
   <div class="container">
     <div class="row">
       <!-- Footer Location-->
