--- a/application/blogs/templates/blogs/layout/insidenevbar.html
+++ b/application/blogs/templates/blogs/layout/insidenevbar.html
@@ -3,7 +3,6 @@
   <a class="navbar-brand" href="{{url_for('blogs.series')}}">Series</a>
   <a class="navbar-brand" href="{{url_for('blogs.author')}}">Authors</a>
   <a class="navbar-brand" href="{{url_for('blogs.addblogs')}}">Add blogs</a>
-  <a class="navbar-brand" href="{{url_for('blogs.staticupload')}}"
-    >File Upload</a
-  >
+  <a class="navbar-brand" href="{{url_for('blogs.staticupload')}}">File Upload</a>
+  <a class="navbar-brand" href="{{url_for('blogs.preblogs')}}">PreBlogs</a>
 </nav>
