--- a/application/blogs/templates/blogs/layout/nevbar.html
+++ b/application/blogs/templates/blogs/layout/nevbar.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img src="#" />
+  <img
+    src="{{url_for('static',filename='img/method-draw-image.svg')}}"
+    style="width:50px; height:50px;"
+  />
   <a class="navbar-brand" href="#">SidLogs</a>
 
   <button
