😬blog(): blog header/bug added

--- a/application/blogs/templates/blogs/main/author.html
+++ b/application/blogs/templates/blogs/main/author.html
@@ -72,7 +72,7 @@
 
                   <tr>
                     <th scope="row">
-                      <a href="{{url_for('blogs.authors',id=i.id)}}">{{i.name}}</a>
+                      <a href="{{url_for('blogs.authors',id=i.slug)}}">{{i.name}}</a>
                     </th>
                     <td>
                       {{i.website}}
