--- a/application/blogs/templates/blogs/main/addblogs.html
+++ b/application/blogs/templates/blogs/main/addblogs.html
@@ -223,44 +223,54 @@
   <div class="card border-0 shadow my-5">
     <div class="card-body p-5">
       <h1 class="font-weight-light">Add blog</h1>
-      <form action="{{url_for('blogs.receiver')}}" method="POST">
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Blog Title</label>
-          <input type="text" class="form-control" name="title" placeholder="Blog Title" />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Author</label>
-          <select class="form-control" name="author">
-            <option>-----</option>
-            {% for i in author %}
-            <option value="{{i.slug}}">{{i.name}}</option>
-            {% endfor %}
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Series</label>
-          <select class="form-control" name="series">
-            <option>-----</option>
-            {% for i in series %}
-            <option>{{i.title}}</option>
-            {% endfor %}
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Time</label>
-          <input type="text" class="form-control" name="time" placeholder="Time" />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Date</label>
-          <input type="text" class="form-control" name="date" placeholder="Date" />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Blog Tags</label>
-          <input type="text" class="form-control" name="tags" placeholder="Tags" />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Meta Tags</label>
-          <input type="text" class="form-control" name="meta" placeholder="Meta" />
+      <form action="{{url_for('blogs.receiver')}}" method="POST" enctype="multipart/form-data">
+        <div class="row">
+          <div class="col-6">
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Blog Title</label>
+              <input type="text" class="form-control" name="title" placeholder="Blog Title" />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Header Image</label>
+              <input type="file" class="form-control" name="file" />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Author</label>
+              <select class="form-control" name="author">
+                <option>-----</option>
+                {% for i in author %}
+                <option value="{{i.slug}}">{{i.name}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Series</label>
+              <select class="form-control" name="series">
+                <option>-----</option>
+                {% for i in series %}
+                <option>{{i.title}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Time</label>
+              <input type="text" class="form-control" name="time" placeholder="Time" />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Date</label>
+              <input type="text" class="form-control" name="date" placeholder="Date" />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Blog Tags</label>
+              <input type="text" class="form-control" name="tags" placeholder="Tags" />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Meta Tags</label>
+              <input type="text" class="form-control" name="meta" placeholder="Meta" />
+            </div>
+          </div>
         </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Content</label>
